--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
       content="TaskFlow Kanban Board"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     
     <title>TaskFlow</title>
   </head>
@@ -18,6 +18,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     
     <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script>
 
   </body>
 </html>
